# ChimeraSpoofer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  chimera-browser.sh  chimera.sh  compile.sh  fonts.conf  mint.yml
include/: platform_factory.hpp  spoofer.hpp  trace_cleaner.hpp
platform/linux/: interceptor.cpp  spoofer.cpp
platform/windows/: spoofer_win.cpp
src/: interceptor.cpp  main.cpp  spoofer.cpp  trace_cleaner.cpp  utils.cpp  utils.hpp
